MEC Production/MEC Production/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Account_Credit_Limit__c</fullName>
        <formula>Account.Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Credit_Note__c</fullName>
        <formula>Account.Credit_Note__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Credit Note</inlineHelpText>
        <label>Account Credit Note</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Over_Due__c</fullName>
        <formula>Account.Over_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Over Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_Stock__c</fullName>
        <label>Available Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_No__c</fullName>
        <label>Booking No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Status_Text__c</fullName>
        <formula>IF( 
ISPICKVAL( Over_Credit_Limit_Approval_Status__c  , &quot;Approved&quot;), 
&quot;Credit Over Limit Approved&quot;, 
IF ( 
 Over_Credit_Limit_Percentage__c  &gt;0 
,&quot;Warning&quot;, 
&quot;OK&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Credit Limit Status Text - to be hidden - This will populate the visual indicator</inlineHelpText>
        <label>Credit Limit Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Status__c</fullName>
        <formula>IF( 
( Credit_Limit_Status_Text__c  = &quot;Credit Over Limit Approved&quot;), 
IMAGE(&quot;https://c.cs87.visual.force.com/resource/1466451643000/CreditOverLimitApproved &quot;, &quot;Credit Over Limit Approved&quot;), 
IF ( 
( Credit_Limit_Status_Text__c = &quot;Warning&quot;) 
, IMAGE(&quot;https://c.cs87.visual.force.com/resource/1466171510000/Warning&quot;, &quot;Warning&quot;), 
IMAGE(&quot;https://c.cs87.visual.force.com/resource/1466171457000/OK&quot;, &quot;Green&quot;) 
) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Front_Margin__c</fullName>
        <label>Front Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Delivery_Date__c</fullName>
        <label>Order Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Over_Credit_Limit_Amount__c</fullName>
        <formula>IF( 
(Account_Credit_Limit__c +  Account_Credit_Note__c - (Account_Over_Due__c + Total_Price__c ))&lt;0, 
(Account_Credit_Limit__c +  Account_Credit_Note__c - (Account_Over_Due__c + Total_Price__c ))*(-1), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If negative, shows (Over Due + SO Amount) - (Account Credit Limit + Account Credit Note), Otherwise shows 0</inlineHelpText>
        <label>Over Credit Limit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Credit_Limit_Approval_Status__c</fullName>
        <label>Over Credit Limit Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Over_Credit_Limit_Percentage__c</fullName>
        <formula>IF( 
 Account_Credit_Limit__c &gt;0, 
 Over_Credit_Limit_Amount__c  /  Account_Credit_Limit__c , 
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Credit Limit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PO_Qty__c</fullName>
        <label>PO Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Validity__c</fullName>
        <label>PO Validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty_fulfilled__c</fullName>
        <label>Qty fulfilled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Qty__c</fullName>
        <label>RFP Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_OverCredit_Limit_Remarks__c</fullName>
        <inlineHelpText>Enter the Reason for over credit Limit request if needed</inlineHelpText>
        <label>Reason for OverCredit Limit / Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Overdue Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit limit Exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit status is blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>SAP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_In_Qty__c</fullName>
        <label>Sell In Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Out_Qty__c</fullName>
        <label>Sell Out Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_in_Channel__c</fullName>
        <label>Stock in Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temporary_Approval_For_OverCredit_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you with you request for a Temporary Approval For Credit Limit?</inlineHelpText>
        <label>Temporary Approval For OverCredit Limit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbooked_Qty__c</fullName>
        <label>Unbooked Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>All_Sales_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>ORIGINAL_ORDER.ORDER_NUMBER</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>ORDERS.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Sales Orders</label>
    </listViews>
    <listViews>
        <fullName>Blocked_Sales_Order</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Blocked</value>
        </filters>
        <label>Blocked Sales Order</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SO01_Over_Credit_Limit_Reason</fullName>
        <active>true</active>
        <description>Enter a reason for over limit if temporary approval is needed</description>
        <errorConditionFormula>Temporary_Approval_For_OverCredit_Limit__c  == True 
&amp;&amp; 
ISBLANK(  Reason_for_OverCredit_Limit_Remarks__c  )</errorConditionFormula>
        <errorMessage>Please enter a reason or the Over Limit request then submit for approval. 
Error: SO01</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO02_Temporary_Approval_For_Credit_Limit</fullName>
        <active>true</active>
        <description>Temporary Approval For Over Credit Limit cannot be unchecked if Over Limit Approval Status is Approved or Rejected already</description>
        <errorConditionFormula>PRIORVALUE(  Temporary_Approval_For_OverCredit_Limit__c  )= TRUE 
&amp;&amp; 
Temporary_Approval_For_OverCredit_Limit__c= False 
&amp;&amp; 
!ISPICKVAL(  Over_Credit_Limit_Approval_Status__c  , &quot;Pending&quot;)</errorConditionFormula>
        <errorDisplayField>Temporary_Approval_For_OverCredit_Limit__c</errorDisplayField>
        <errorMessage>You are not allowed to unchecked the &quot;Temporary Approval For Credit Limit &quot; field once Approval or Rejection is provided 
Error: SO02</errorMessage>
    </validationRules>
</CustomObject>